# WEB-HW6

./: README.md  hw.db  hw_db_script.sql  pyproject.toml  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  seeds.py
