[tool.poetry]
name = "web-hw6"
version = "0.1.0"
description = ""
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw6"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
faker = "^18.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
